# drift-adaptor

./: Anchor.toml  package.json  solana-validator-local.sh
programs/drift-adaptor/: Cargo.toml
programs/drift-adaptor/src/: cpi.rs  error.rs  lib.rs  macros.rs
programs/drift-adaptor/src/instructions/: initialize_token.rs  initialize_vault.rs  mod.rs
programs/drift-adaptor/src/states/: mod.rs  price.rs  token_map.rs  vault.rs
tests/: constants.ts  drift-adaptor.ts  helper.ts  test.ts
tests/adaptor/: initialize-token.ts  initialize-vault.ts
tests/lib/: drift-helper.ts
