[package]
name = "drift-adaptor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drift_adaptor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
drift = { git = "https://github.com/drift-labs/protocol-v2.git", version = "2.74.0", features = ["cpi", "no-entrypoint"] }
fixed = "=1.23.1"
solana-program = "=1.14.16"
borsh = "0.9.1"